force-app/main/default/objects/Opportunity/fields/Stripe_Latest_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Latest_Invoice__c</fullName>
    <label>Stripe Latest Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>