force-app/main/default/objects/Opportunity/fields/Stripe_Price__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Price</label>
    <referenceTo>Stripe_Price__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>