force-app/main/default/objects/Opportunity/fields/Stripe_Price_QTY__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_QTY__c</fullName>
    <label>Stripe Price QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>